--- a/style.css
+++ b/style.css
@@ -120,3 +120,14 @@ div#article img {
   display: block;
   margin: 0 auto;
 }
+
+/* HIGHLIGHTLY CSS */
+
+span.keyword {
+  color: #ffff00;
+}
+
+span.comment {
+  color: #a4bad7;
+  font-style: italic;
+}
